# swagger.yaml
@@ -227,7 +227,7 @@ paths:
         '200':
           description: Categoria deletada com sucesso
 
-  /usuarios:
+  /users/usuarios:
     get:
       summary: Obter todos os usuários
       responses:
@@ -268,7 +268,7 @@ paths:
         '200':
           description: Usuário criado com sucesso
 
-  /usuarios/{id}:
+  /users/usuarios/{id}:
     get:
       summary: Obter usuário por ID
       parameters:
@@ -304,7 +304,7 @@ paths:
         '200':
           description: Usuário deletado com sucesso
 
-  /auth/login:
+  /users/login:
     post:
       summary: Autenticar usuário
       description: Realiza login com email e senha
@@ -340,7 +340,7 @@ paths:
         '401':
           description: Credenciais inválidas
 
-  /auth/reset-password:
+  /users/reset-password:
     post:
       summary: Solicitar redefinição de senha
       description: Envia um token de recuperação para o email informado
@@ -358,7 +358,7 @@ paths:
         '200':
           description: Token de recuperação enviado
 
-  /auth/new-password:
+  /users/new-password:
     post:
       summary: Redefinir senha
       description: Redefine a senha do usuário com base no token de recuperação
